[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hosts-manager"
version = "0.1"
description = "Easily enable/disable named sections in your hosts file"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "benzkji", email = ""}
]
dependencies = [
    "click",
]

[project.scripts]
hosts = "hosts:hosts_manager"

[project.urls]
"Homepage" = "https://github.com/benzkji/hosts-manager"
"Bug Tracker" = "https://github.com/benzkji/hosts-manager/issues"

[tool.setuptools]
py-modules = ["hosts"]